Bug 109385 - Default width of sidebar causes controls to be cropped in Properties, Transition and Animation tabs
Summary: Default width of sidebar causes controls to be cropped in Properties, Transit...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.3.2.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sidebar-UI-UX Impress-UX
  Show dependency treegraph
 
Reported: 2017-07-26 16:23 UTC by Yousuf Philips (jay) (retired)
Modified: 2017-09-29 11:27 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
ruler in px over Sidebar for Impress at 6.0.0 (39.83 KB, image/png)
2017-07-26 16:54 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2017-07-26 16:23:50 UTC
Steps:
1. Clear or rename user profile
2. Start Impress
3. Notice sidebar controls are cropped

Regression as default width in 5.2 was 314px and in 5.3 its 280px.

Version: 6.0.0.0.alpha0+
Build ID: 46bfe17e2bceced4ceffe82ba98d8687b31d9ce8
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 1 V Stuart Foote 2017-07-26 16:52:50 UTC
@Jay, confirmed on Windows 10 Pro 64-bit en-US with
Version: 6.0.0.0.alpha0+
Build ID: 343d40206a929969e1755b073edae91cc4bd9751
CPU threads: 8; OS: Windows 6.19; UI render: GL; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-07-26_05:51:20
Locale: en-US (en_US); Calc: CL

But I only get about 218px for the Deck on opening. And on a click onto the deck it expands to about 263px with no widgets obscured.  The Hide/Show bar 6px, and the Tab Bar 40px are fixed in width.
Comment 2 V Stuart Foote 2017-07-26 16:54:45 UTC
Created attachment 134878 [details]
ruler in px over Sidebar for Impress at 6.0.0

screen clip ~218px of the Deck showing with defaults/clean profile on initial launch.
Comment 3 Yousuf Philips (jay) (retired) 2017-07-26 17:05:29 UTC
(In reply to V Stuart Foote from comment #1)
> But I only get about 218px for the Deck on opening. And on a click onto the
> deck it expands to about 263px with no widgets obscured.  The Hide/Show bar
> 6px, and the Tab Bar 40px are fixed in width.

My px values are my measurements of the entire sidebar (deck, tab bar, hide/show button). The deck only auto expands to not crop any widgets when i try to resize the deck and not when i click on any of the widgets.
Comment 4 V Stuart Foote 2017-07-26 17:11:01 UTC
Sorry, your right. It actually snapped to the full width when I click/dragged the Hide/Show bar. Seems like the action linked there should be performed by default when launching. So 6+40+263 ~310px <=> 320px so UI width seems correct in sum, just not fully expanded on opening.
Comment 5 Aron Budea 2017-08-13 05:17:14 UTC
How does this relate to bug 79758? I know that's in Writer and this is in Impress, and possibly the width got reduced, but maybe the behavior shouldn't depend on fixed sizes, but open the Sidebar to the width the controls can fit on.
Comment 6 Yousuf Philips (jay) (retired) 2017-09-27 20:59:00 UTC
(In reply to Aron Budea from comment #5)
> How does this relate to bug 79758?

Well they are both about cropped controls in the sidebar, but this is a regression in impress and we need to bibisect to see why it was changed.

> I know that's in Writer and this is in
> Impress, and possibly the width got reduced, but maybe the behavior
> shouldn't depend on fixed sizes, but open the Sidebar to the width the
> controls can fit on.

Many controls can adapt to the available space, so we need to set a fixed size for the ones that cant.
Comment 7 Aron Budea 2017-09-28 01:27:28 UTC
Bibisected to the following commit using repo bibisect-win32-5.3. Adding Cc: to Caolán McNamara.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=4bc99ab1ac4bed1df66d1df8b1ca3168e7e3d8f4
author		Caolán McNamara <caolanm@redhat.com>	2016-07-10 15:28:23 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2016-07-10 18:12:39 (GMT)

"ditch the multiply dialog width * X where X is based on language thing

Which should be unnecessary since the vcl layout work and optimal size widgets, and its a small and arbitary set of languages for which its set."
Comment 8 Caolán McNamara 2017-09-28 10:08:35 UTC
Arbitrarily multiplying some value by some other random language based multiplier is no solution so bisect isn't particularly useful
Comment 9 Caolán McNamara 2017-09-28 10:38:21 UTC
https://gerrit.libreoffice.org/42900 is one possibility anyway
Comment 10 Caolán McNamara 2017-09-28 11:03:53 UTC
The problem in "properties" in impress is the "Display Master Background" long string in column 2, if it was shorter, or spanned the two columns then properties doesn't have a problem, e.g. "Master Background" instead of "Display Master Background"

In "Slide transition" the "Automatically after: <spin button>" is the widest thing, followed by "Stop Previous sound" in the dropdown, those are the problems there. There's probably also too much padding around the Slide Transition icons within the scrolling region.
Comment 11 Commit Notification 2017-09-28 11:05:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e302ade40e202d285e2208fb6190850e126b4eae

Related: tdf#109385 make default panel width wider

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2017-09-28 11:06:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6266e83d306ed6e739491b3def2dc453556b14ed

Related: tdf#109385 make automatically after: <spinbutton> width narrower

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Caolán McNamara 2017-09-28 11:09:40 UTC
I've adjusted the default panel width to be wider and made the time spinbutton narrower which makes everything fit by default as far as I can see. Adjusting the above mentioned strings or other elements would make the impress sidebar narrower allowing the default width above to be reduced. I'll leave it to UX to decide about backports or the potential for narrowing the above elements, but close this wrt the regression
Comment 14 Yousuf Philips (jay) (retired) 2017-09-28 15:28:33 UTC
(In reply to Caolán McNamara from comment #10)
> The problem in "properties" in impress is the "Display Master Background"
> long string in column 2, if it was shorter, or spanned the two columns then
> properties doesn't have a problem, e.g. "Master Background" instead of
> "Display Master Background"

I already shrunk those labels recently, and thought to shrink it even further to 'Background' and use a tooltip to give the full 'Display Master Background' text.
https://gerrit.libreoffice.org/#/c/42761/