Related: tdf#109385 make default panel width wider

Change-Id: Ia1c5fc96ccb8b91a3091ef925526a277f25662c6
Reviewed-on: https://gerrit.libreoffice.org/42900
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>